--- a/webpack/package.json
+++ b/webpack/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "file-loader": "6.2.0",
     "cross-env": "5.1.5",
     "css-loader": "^6.7.1",
     "mini-css-extract-plugin": "2.6.1",
